Model, views and controllers initialised
Models created and scaffold items created.
