# booking-facilities/Models/Sport.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace booking_facilities.Models
+{
+    public class Sport
+    {
+        public virtual int SportId { get; set; }
+        public virtual String SportName { get; set; }
+    }
+}
