# docs/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "This API is used to confirm match bookings for the AberFitness Ladder micro-service.",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "title": "Booking-Facilities",
     "contact": {
       "name": "Robert",
@@ -265,7 +265,7 @@
             "schema": {
               "type": "array",
               "items": {
-                "$ref": "#/definitions/SportsFacilities"
+                "$ref": "#/definitions/Facility"
               }
             }
           }
@@ -284,7 +284,7 @@
         "bookingId",
         "dateTime",
         "userId",
-        "sportsFacilities"
+        "facility"
       ],
       "properties": {
         "bookingId": {
@@ -299,17 +299,18 @@
           "type": "integer",
           "format": "int64"
         },
-        "sportsFacilities": {
-          "$ref": "#/definitions/SportsFacilities"
+        "facility": {
+          "$ref": "#/definitions/Facility"
         }
       }
     },
     "Facility": {
       "type": "object",
       "required": [
+        "facilityId",
         "facilityName",
         "venue",
-        "facilityId"
+        "sport"
       ],
       "properties": {
         "facilityId": {
@@ -322,6 +323,9 @@
         },
         "venue": {
           "$ref": "#/definitions/Venue"
+        },
+        "sport": {
+          "$ref": "#/definitions/Sport"
         }
       }
     },
@@ -356,26 +360,6 @@
         "sportName": {
           "type": "string",
           "example": "Swimming"
-        }
-      }
-    },
-    "SportsFacilities": {
-      "type": "object",
-      "required": [
-        "SportsFacilityId",
-        "FacilityId",
-        "SportId"
-      ],
-      "properties": {
-        "SportsFacilityId": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "FacilityId": {
-          "$ref": "#/definitions/Facility"
-        },
-        "SportId": {
-          "$ref": "#/definitions/Sport"
         }
       }
     }
